--- a/app/elements/things-content/things-chart-content.html
+++ b/app/elements/things-content/things-chart-content.html
@@ -316,6 +316,7 @@ Copyright © HatioLab Inc. All rights reserved.
             data: dataset,
             options: {
               responsive: true,
+              maintainAspectRatio: false,
               legend: {
                 display: legendPosition ? true : false,
                 position: legendPosition
