--- a/app/elements/base/base-home.html
+++ b/app/elements/base/base-home.html
@@ -231,7 +231,7 @@ Copyright © HatioLab Inc. All rights reserved.
 				<span class="month">1월</span>
 			</div>
 
-			<div id="chart-subtitle">물동량 추이
+			<div id="chart-subtitle">최근 3개월 물동량 추이
 				<!--span class="chart-info">전월 최대<br></span>
 				<span class="chart-info">전월 최소<br></span>
 				<span class="chart-info">단위: PCS</span-->
