메뉴 타입에 그리드 & 차트 자동 생성 유형 추가

--- a/app/elements/things-app/things-elements.html
+++ b/app/elements/things-app/things-elements.html
@@ -58,3 +58,4 @@
 
 <link rel="import" href="../things-content/chartjs-lib.html">
 <link rel="import" href="../things-content/things-chart-content.html">
+<link rel="import" href="../things-content/things-grid-chart-content.html">
