--- a/app/elements/things-content/things-chart-content.html
+++ b/app/elements/things-content/things-chart-content.html
@@ -8,10 +8,8 @@ Copyright © HatioLab Inc. All rights reserved.
 <link rel="import" href="../../bower_components/things-form/things-search-form.html">
 <link rel="import" href="../../bower_components/things-content/things-resource-menu-content-behavior.html">
 
-<link rel="import" href="./things-chart-behavior.html">
-
 <!--
-	검색 폼 - 메뉴 기반의 그리드 && 차트 화면으로 구성된 화면을 등록한다.
+	검색 폼 & 차트 화면으로 구성된 화면을 등록한다.
 	메뉴에 그리드 설정이 되어있어야 하고 메뉴 메타에 메뉴 configuration이 존재해야 한다. 
 -->
 
