--- a/app/elements/logis/job-batch.html
+++ b/app/elements/logis/job-batch.html
@@ -285,7 +285,7 @@ Copyright © HatioLab Inc. All rights reserved.
        * @param {Object} event 라우트 변경 이벤트
        */
       _handlerRouteChange: function(event) {
-        this.refreshData();
+        //this.refreshData();
       },
 
       /**
